Fix first numbered list broken in 3bc0e88b437

--- a/css/syntax.css
+++ b/css/syntax.css
@@ -152,6 +152,10 @@ div.dokuwiki .li {
     list-style-type: square;
 }
 
+#icke__page .content ol {
+    list-style-type: decimal;
+}
+
 #icke__page .content ol ol {
     list-style-type: upper-roman;
 }
